b=489511; gfxFontCache will never hit on ft2 backend; r=karlt